[package]
name = "imagepipe2"
version = "0.5.0"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>", "Anshul Sanghi <anshul@anshulsanghi.tech>"]
description = "An image processing pipeline"
documentation = "https://docs.rs/imagepipe/"
repository = "https://github.com/Rho-Studio/imagepipe.git"
license = "LGPL-3.0-only"
categories = ["multimedia::images"]
edition = "2024"

[dependencies]
lazy_static = "1"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.9"
bincode = { version = "2", features = ["serde"] }
blake3 = "1"
log = "0.4"
num-traits = "0.2"
image = "0.25"

[dependencies.rawloader2]
git = "https://github.com/Rho-Studio/rawloader.git"

[dependencies.multicache]
version = "0.6.1"

[profile.dev]
opt-level = 3

[[bin]]
name = "converter"
doc = false

[lints.clippy]
upper_case_acronyms = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }
inherent_to_string_shadow_display = { level = "allow", priority = 1 }